style.css
body {
    margin: 0px;
    padding: 0px;
    background-color: grey;
}

#display {
    height: 18px;
    color: white;
    text-align: right;
    font-family: digital;
    font-size: 25px;

}

#displayResult {
    height: 18px;
    color: white;
    text-align: right;
    font-family: digital;
    font-size: 25px;
}

.calculator {
    display: flex;
    justify-content: center;
    position: relative;
    top: 200px;
    margin: 0px;
}

tbody {
    background-color: black;
    border-radius: 25px;
    border-left: 25px solid black;
    border-right: 25px solid black;
}

.btn {
    width: 50px;
    height: 50px;
    border-radius: 50px;
    border-color: black;
    background-color: black;
    color: #ff8c00;
    outline: none;
}

td {
    padding: 10px;
}

@font-face {
    font-family: "digital";
    src: url(fonts/digital-7.ttf);
    font-style: normal;
    font-weight: 100;
}

#footer {
    color: rgba(0,0,0,.54);
    position: fixed;
    bottom: 40px;
    left: 0;
    text-align: center;
    width: 100%;
    font-size: 30px;
}

